Fix canvas size too large for most screens

--- a/style.css
+++ b/style.css
@@ -9,4 +9,6 @@ body {
     justify-content: center;
     align-items: center;
     padding: 80px 0;
+    height: 100%;
+    width: 100%;
 }
